<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="houseViewModel"
            type="com.nihal.housingapp.viewmodel.HouseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/paddingLR"
        android:paddingTop="@dimen/paddingTop"
        android:paddingRight="@dimen/paddingLR"
        tools:context=".view.HomeFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/searchHintText"
            style="@style/boldTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:text="@string/searchHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/search_background"
            android:fontFamily="@font/heebo"
            android:hint="@string/searchbarHint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="@dimen/body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchHintText"
            android:textCursorDrawable="@drawable/cursor_color"/>

        <ImageView
            android:id="@+id/searchIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="@+id/searchBar"
            app:layout_constraintTop_toTopOf="@+id/searchBar" />

        <ImageView
            android:id="@+id/cancelIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_cancel"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/searchBar"
            app:layout_constraintTop_toTopOf="@+id/searchBar" />

        <ImageView
            android:id="@+id/searchImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="85dp"
            android:src="@drawable/house_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchBar"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/noResultsText"
            style="@style/detailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/noResultsFound"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchBar"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homeRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>