<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activities.HouseDetailsActivity">

    <data>
        <variable
            name="house"
            type="com.nihal.housingapp.models.House" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapseToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/houseItemImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{house.image}"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="pin"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appbar"
            android:layout_gravity="fill_vertical"
            android:elevation="10dp"
            android:layout_marginTop="-15dp"
            android:paddingBottom="20dp"
            android:background="@drawable/detail_background"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/houseItemImage"
                android:padding="20dp">

                <TextView
                    android:id="@+id/housePrice"
                    style="@style/detailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{`Price: €` + String.format("%,d", house.price)}'
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <include
                    android:id="@+id/include"
                    layout="@layout/house_details_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:layout_marginEnd="260dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bedroomsAmount"
                    style="@style/number"
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="4dp"
                    android:text="@{String.valueOf(house.bedrooms)}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

                <TextView
                    android:id="@+id/bathroomsAmount"
                    style="@style/number"
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="130dp"
                    android:layout_marginTop="4dp"
                    android:text="@{String.valueOf(house.bathrooms)}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

                <TextView
                    android:id="@+id/descriptionTextView"
                    style="@style/detailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/housePrice" />

                <TextView
                    android:id="@+id/locationTextView"
                    style="@style/detailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

                <TextView
                    android:id="@+id/locationHint"
                    style="@style/body"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/locationHint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

                <TextView
                    android:id="@+id/descriptionText"
                    style="@style/body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@{house.description}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

                <ImageView
                    android:id="@+id/savedIcon"
                    android:layout_width="26dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/saveText"
                    style="@style/body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/savedIcon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>